# webknossos

./: .babelrc  .bowerrc  .bulldozer.yml  .codespellrc  .dependency-cruiser.js  .dockerignore  .editorconfig  .eslintignore  .eslintrc.json  .flowconfig  .gitbook.yaml  .gitignore  .gitmodules  .importjs.js  .jshintrc  .pnp.cjs  .prettierignore  .prettierrc  .scalafix.conf  .scalafmt.conf  .yarnrc  .yarnrc.yml  2026-02-05-node-positions.diff  AGENTS.md  CHANGELOG.md  CHANGELOG.released.md  CHANGELOG.unreleased.md  CITATION.bib  CITATION.cff  CLAUDE.md  Code of Conduct.md  Contributing Guide.md  DEV_INSTALL.md  Dockerfile  Dockerfile.dev  Dockerfile.puppeteer  Jenkinsfile  LICENSE  MIGRATIONS.md  MIGRATIONS.released.md  (+67 more)
.circleci/: cache_version  config.yaml  config.yml  not-on-master.sh  slack-notification.sh  upload_datastore_artifacts.sh
.github/: Dockerfile.datastore  Dockerfile.tracingstore  Dockerfile.webknossos  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  common_edge_cases.md  docker-compose.yml  not-on-master.sh  slack-notifiaction.sh  (+1 more)
WebGl/: index.html
webknossos-jni/src/: .clang-format  CMakeLists.txt  bucketScanner.cpp  compressoCompressor.cpp  dracoToStlDecoder.cpp  jniutils.cpp  marchingCubes.cpp
webknossos-jni/src/include/: cc3d.hpp  com_scalableminds_webknossos_datastore_compresso_NativeCompressoCompressor.h  com_scalableminds_webknossos_datastore_draco_NativeDracoToStlConverter.h  com_scalableminds_webknossos_datastore_helpers_NativeBucketScanner.h  com_scalableminds_webknossos_datastore_services_mcubes_NativeMarchingCubes.h  compresso.hpp  jniutils.h
(+8647 files in other folders)
